Bug 411137 - Esc key closes the editor without saving
Summary: Esc key closes the editor without saving
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 5.11.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-21 14:46 UTC by Marc van Kempen
Modified: 2019-08-22 06:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc van Kempen 2019-08-21 14:46:55 UTC
SUMMARY
When editing an event and, for example, hitting a wrong key which displays the search window, one needs to press ESC to leave the popup and return to the event editor, however if one is too diligent and presses ESC more than once, the event editor is closed without saving. 

Above popup is just an example how one might need to press the ESC key while editing an event.

STEPS TO REPRODUCE
1. Start editing/adding an event
2. Hit ESC
3. Event editor closes without saving

OBSERVED RESULT
The work entered is lost

EXPECTED RESULT
If changes have been made either don't close the editor, or ask confirmation.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Linux (x86_64) release 5.2.1-arch1-1-ARCH
(available in About System)
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2019-08-22 06:06:04 UTC
I confirm it.
I will work on it soon.
Comment 2 Laurent Montel 2019-08-22 06:34:25 UTC
Git commit f21fc4afeb69a39bcedc6ea0a8ee17d8e3e77a70 by Laurent Montel.
Committed on 22/08/2019 at 06:33.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 411137 - Esc key closes the editor without saving

FIXED-IN: 5.12.1

M  +14   -0    src/incidencedialog.cpp
M  +1    -0    src/incidencedialog.h

https://commits.kde.org/incidenceeditor/f21fc4afeb69a39bcedc6ea0a8ee17d8e3e77a70