Fix Bug 411137 - Esc key closes the editor without saving

FIXED-IN: 5.12.1
BUG: 411137